--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,5 +32,7 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g default-command "reattach-to-user-namespace -l bash"
 set-window-option -g automatic-rename on
+
+# OS X Specific Configs
+if-shell "uname | grep -q Darwin" "source-file .tmux-macosx.conf" 
