--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ bind C-b send-prefix
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
 set-window-option -g mode-mouse on
-set-option mouse-select-pane on
+set-option -g mouse-select-pane on
 set-option -g history-limit 10000
 set -g default-terminal "xterm-256color"
 
@@ -35,4 +35,4 @@ bind-key l select-pane -R
 set-window-option -g automatic-rename on
 
 # OS X Specific Configs
-if-shell "uname | grep -q Darwin" "source-file .tmux-macosx.conf" 
+if-shell "uname | grep -q Darwin" "source-file .tmux-osx.conf" 
