updated tmux conf for debian

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,5 +34,8 @@ bind-key l select-pane -R
 
 set-window-option -g automatic-rename on
 
+# powerline
+source ~/bin/powerline/powerline/bindings/tmux/powerline.conf
+
 # OS X Specific Configs
 if-shell "uname | grep -q Darwin" "source-file .tmux-osx.conf" 
