--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = bin/powerline
 	url = git@github.com:Lokaltog/powerline.git
 	branch = develop
+[submodule ".vim/bundle/vundle"]
+	path = .vim/bundle/vundle
+    url = https://github.com/gmarik/vundle.git
+	branch = master
