--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,6 @@ set -g default-terminal "xterm-256color"
 set -g utf8
 set-window-option -g utf8 on
 
-set -g status-right '"#22T" %d-%b-%y'
-set -g window-status-current-bg black
-set -g window-status-current-fg green
 
 bind C-a last-window
 
@@ -35,7 +32,7 @@ bind-key l select-pane -R
 set-window-option -g automatic-rename on
 
 # powerline
-source ~/bin/powerline/powerline/bindings/tmux/powerline.conf
+source ~/.tmux-powerline.conf
 
 # OS X Specific Configs
-if-shell "uname | grep -q Darwin" "source-file .tmux-osx.conf" 
+if-shell "uname | grep -q Darwin" "source-file ~/.tmux-osx.conf" 
