more powerline stuff

--- a/.tmux-powerline.conf
+++ b/.tmux-powerline.conf
@@ -1,29 +1,24 @@
 if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 
-C16="white"
-C254="brightblack"
-C240="brightyellow"
-C234="blue"
-C234="brightblack"
-C31="blue"
-C117="white"
-C231="white"
-C249="white"
+SESSION="brightwhite"
+STATUSBG="white"
+STATUSFG="blue"
+
 
 set -g status on
 set -g status-utf8 on
 set -g status-interval 2
-set -g status-fg $C231
-set -g status-bg $C234
+set -g status-fg $STATUSFG
+set -g status-bg $STATUSBG
 set -g status-left-length 20
-set -g status-left "#[fg=$C16,bg=$C254,bold] #S #[fg=$C254,bg=$C234,nobold]#(eval $POWERLINE_COMMAND tmux left)"
+set -g status-left "#[fg=$STATUSFG,bg=$SESSION,bold] #S #[fg=$SESSION,bg=$STATUSBG,nobold]#(eval $POWERLINE_COMMAND tmux left)"
 set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
 set -g status-right-length 150
-set -g window-status-format "#[fg=$C244,bg=$C234]#I #[fg=$C240] #[default]#W "
-set -g window-status-current-format "#[fg=$C234,bg=$C31]#[fg=$C117,bg=$C31] #I  #[fg=$C231,bold]#W #[fg=$C31,bg=$C234,nobold]"
+set -g window-status-format "#[fg=$STATUSFG,bg=$STATUSBG]#I #[fg=$STATUSFG] #[fg=$STATUSFG]#W "
+set -g window-status-current-format "#[fg=$STATUSBG,bg=$STATUSFG]#[fg=$STATUSBG,bg=$STATUSFG] #I  #[fg=$STATUSBG,bold]#W #[fg=$STATUSFG,bg=$STATUSBG,nobold]"
 
 
-set-window-option -g window-status-fg $C249
+set-window-option -g window-status-fg $STATUSBG
 set-window-option -g window-status-activity-attr none
 set-window-option -g window-status-bell-attr none
 set-window-option -g window-status-activity-fg yellow
