Updated some more dotfiles Might get rid of powerline, it's a little sluggish switch it out for airline.

--- a/.tmux-powerline.conf
+++ b/.tmux-powerline.conf
@@ -1,8 +1,8 @@
 if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 
 SESSION="brightwhite"
-STATUSBG="white"
-STATUSFG="blue"
+STATUSBG="brightblack"
+STATUSFG="white"
 
 
 set -g status on
