--- a/.tmux-powerline.conf
+++ b/.tmux-powerline.conf
@@ -1,4 +1,4 @@
-if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
+# if-shell 'test -z "$POWERLINE_COMMAND"' 'if-shell "which powerline-client" "set-environment -g POWERLINE_COMMAND powerline-client" "set-environment -g POWERLINE_COMMAND powerline"'
 
 SESSION="brightwhite"
 STATUSBG="brightblack"
