Remove special chars from tmux.

--- a/.tmux-powerline.conf
+++ b/.tmux-powerline.conf
@@ -11,11 +11,11 @@ set -g status-interval 2
 set -g status-fg $STATUSFG
 set -g status-bg $STATUSBG
 set -g status-left-length 20
-set -g status-left "#[fg=$STATUSFG,bg=$SESSION,bold] #S #[fg=$SESSION,bg=$STATUSBG,nobold]#(eval $POWERLINE_COMMAND tmux left)"
-set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
+set -g status-left "#[fg=$STATUSFG,bg=$SESSION,bold] #S #[fg=$SESSION,bg=$STATUSBG,nobold]"
+# set -g status-right '#(eval $POWERLINE_COMMAND tmux right -R pane_id=`tmux display -p "#D"`)'
 set -g status-right-length 150
-set -g window-status-format "#[fg=$STATUSFG,bg=$STATUSBG]#I #[fg=$STATUSFG] #[fg=$STATUSFG]#W "
-set -g window-status-current-format "#[fg=$STATUSBG,bg=$STATUSFG]#[fg=$STATUSBG,bg=$STATUSFG] #I  #[fg=$STATUSBG,bold]#W #[fg=$STATUSFG,bg=$STATUSBG,nobold]"
+set -g window-status-format "#[fg=$STATUSFG,bg=$STATUSBG]#I #[fg=$STATUSFG] #[fg=$STATUSFG]#W "
+set -g window-status-current-format "#[fg=$STATUSBG,bg=$STATUSFG]#[fg=$STATUSBG,bg=$STATUSFG] #I #[fg=$STATUSBG,bold]#W #[fg=$STATUSFG,bg=$STATUSBG,nobold]"
 
 
 set-window-option -g window-status-fg $STATUSBG
