--- a/.gitmodules
+++ b/.gitmodules
@@ -3,8 +3,8 @@
 	url = git@github.com:Lokaltog/powerline.git
 	branch = develop
 [submodule ".vim/bundle/vundle"]
-	path = .vim/bundle/vundle
-    url = git@github.com:gmarik/vundle.git
+	path = .vim/bundle/Vundle.vim
+	url = git@github.com:gmarik/Vundle.vim.git 
 	branch = master
 [submodule ".bash_it"]
     path = .bash_it
