--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = bin/powerline
 	url = git@github.com:Lokaltog/powerline.git
 	branch = develop
-[submodule ".vim/bundle/vundle"]
+[submodule ".vim/bundle/Vundle.vim"]
 	path = .vim/bundle/Vundle.vim
 	url = git@github.com:gmarik/Vundle.vim.git 
 	branch = master
