Modify all the things.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,7 +31,7 @@ bind-key l select-pane -R
 
 set-window-option -g automatic-rename on
 
-source ~/.tmux-powerline.conf
-
 # OS X Specific Configs
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux-osx.conf" 
+run-shell "vim +q"
+
